fix: added item-year span to hide fave movie & game years on tablet and smaller screen widths

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -582,6 +582,10 @@ header {
                         width: 100%;
                         padding: 0 8px;
                     }
+
+                    .item-year {
+                        display: none;
+                    }
                 }
 
             }
